# analyzer_subpoly

./: Makefile  SUBPOLY_IMPL.md  dune  dune-project  goblint.opam  make.sh  subpoly_changes_2026-07-14.md
conf/svcomp26/: level05-subpoly-fable.json  level05-subpoly.json
scripts/: update_suite.rb
src/: dune  goblint_lib.ml
src/analyses/apron/: subPolyhedraAnalysis.apron.ml  subPolyhedraFableAnalysis.apron.ml  subPolyhedraManAnalysis.apron.ml
src/cdomains/apron/: subPolyhedraDomain.apron.ml
src/config/: options.schema.json
tests/regression/63-affeq/: 22-join-sparse-disjunct.c
tests/regression/90-subpoly/: 01-smoke.c  02-normalization.c  03-join-slack-lengths.c  03-single-ineq.c  03-widen-loop.c  04-join-branches.c  04-slack-dedup.c  04-two-sided-bounds.c  05-equality-interval-reduction.c  05-inequality-reduce.c  05-insufficient-info-unknown.c  05-join-inequalities.c  06-constant-assignment.c  06-equality-interval-reduction.c  06-simplex-reduce.c  06-widen-inequality.c  (+52 more)
tests/unit/: dune  mainTest.ml  subPolyhedraDomainTest.apron.ml  subPolyhedraDomainTest.no-apron.ml  subPolyhedraFableDomainTest.apron.ml  subPolyhedraFableDomainTest.no-apron.ml  subPolyhedraManDomainTest.apron.ml  subPolyhedraManDomainTest.no-apron.ml  subpolycoreTest.apron.ml  subpolycoreTest.no-apron.ml
tmp_benchmark/: bench1_many_vars.c  bench2_nested_widen.c  bench3_branchy_joins.c  bench4_inequalities.c  bench5_query_heavy.c  run_benchmarks.sh
tmp_benchmark/stats/: bench1_many_vars.txt  bench2_nested_widen.txt  bench3_branchy_joins.txt  bench4_inequalities.txt  bench5_query_heavy.txt
(+106 files in other folders)
